--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ gast==0.4.0
 grpcio==1.34.0
 h5py==2.10.0
 imageio==2.9.0
-importlib-metadata==3.3.0
+importlib-metadata==3.4.0
 joblib==1.0.0
 Keras==2.2.4
 Keras-Applications==1.0.8
@@ -29,9 +29,10 @@ scikit-learn==0.22
 scipy==1.5.4
 six==1.15.0
 tensorboard==1.11.0
-tensorflow==1.11.0
+tensorflow-gpu==1.11.0
 termcolor==1.1.0
 tifffile==2020.9.3
 typing-extensions==3.7.4.3
+uncertainty-metrics==0.0.81
 Werkzeug==1.0.1
 zipp==3.4.0
